Mon Oct 01 13:11:24 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* net/remoteconnection.cc: After calling read(), check for received
	  == 0 after checking for errors, so that if an EINTR occurs in
	  read, we don't report EOF instead of retrying.

Sun Sep 30 23:20:34 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* api/omquery.cc,api/omqueryinternal.cc,include/xapian/query.h: Add
	  OP_MULT_WEIGHT operator, and a new Query constructor which takes
	  a single subquery and a "double" parameter - currently only
	  useful for OP_MULT_WEIGHT.  Add dbl_parameter to Query::Internal,
	  to hold this parameter.  Add serialisation of OP_MULT_WEIGHT
	  using "." to represent the operator.  Drop OP_MULT_WEIGHT
	  operators which have a parameter of 1 (or very close) when
	  simplifying, since these have no effect.
	* matcher/multweightpostlist.cc,matcher/multweightpostlist.h: New
	  files, implementing a postlist which multiplies the weights from
	  its single sub-postlist by a parameter.
	* matcher/Makefile.mk: Add new files.
	* matcher/localmatch.cc: Add support for the OP_MULT_WEIGHT query
	  operator, which produces a MultWeightPostList if the associated
	  parameter is greater than DBL_EPSILON, and produces a boolean query
	  otherwise.
	* tests/api_anydb.cc: Add tests for OP_MULT_WEIGHT operator with
	  various queries, and various multipliers.
	* NEWS: Update

Sun Sep 30 23:13:29 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* tests/harness/testsuite.h: Add TEST_NOT_EQUAL_DOUBLE() macro.
	* tests/harness/testsuite.cc: Add special
	  case to TEST_EQUAL_DOUBLE_() for exact equality of the supplied
	  arguments.  This is tidier in general, because it avoids "inf"
	  being produces by the calculation, but is only actually necessary
	  in the case where the arguments are both exactly 0; it all works
	  out nicely for other values of the arguments.

Sun Sep 30 21:12:40 BST 2007  Richard Boulton <richard@lemurconsulting.com>
