@@ -1,3 +1,10 @@
+Mon Oct 01 13:13:48 BST 2007  Richard Boulton <richard@lemurconsulting.com>
+
+	* api/omqueryinternal.cc: Fix access of uninitialised member when
+	  unserialising a mult-weight query.
+	* tests/internaltest.cc: Add a regression test for unserialisationg
+	  of mult-weight queries.
+
 Mon Oct 01 13:11:24 BST 2007  Richard Boulton <richard@lemurconsulting.com>
 
 	* net/remoteconnection.cc: After calling read(), check for received
